# bcc

./: .clang-format  .gitignore  ;  Makefile  README.md  configure  lib.c  meson.build  qbe  test.s  test.ssa  todo.md
docs/: language.md
include/: ast.h  codegen.h  emit.h  error.h  lexer.h  parser.h  pp.h  resolve_names.h  sem_types.h  tac.h  types.h  unresolved_ast.h  utils.h
include/bcc/: ast.h  codegen.h  error.h  lexer.h  parser.h  pp.h  sem_names.h  sem_types.h  semantics.h  utils.h
src/: codegen.c  emit.temp  error.c  gen_stack.c  lexer.c  main.c  parser.c  pp.c  resolve_names.c  sem_names.c  sem_return.c  sem_types.c  tac.c  tac.temp  types.c  utils.c
